test 50d word embeddings, they should do the job

--- a/app/query_imgs_w_emb_full.ipynb
+++ b/app/query_imgs_w_emb_full.ipynb
@@ -120,7 +120,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -129,27 +129,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Wall time: 50.1 s\n"
+      "Wall time: 4.63 s\n"
      ]
     }
    ],
    "source": [
     "%%time\n",
     "data_path = r\"C:\\Users\\alexa\\Documents\\data\\glove.6B\"\n",
-    "glove_data_file = 'glove.6B.300d.txt'\n",
+    "glove_data_file = 'glove.6B.50d.txt'\n",
     "emb = pd.read_table(os.path.join(data_path, glove_data_file), sep=\" \", index_col=0, header=None, quoting=csv.QUOTE_NONE)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -158,7 +158,7 @@
        "4.990658141405909"
       ]
      },
-     "execution_count": 31,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -166,6 +166,26 @@
    "source": [
     "import numpy as np\n",
     "np.linalg.norm(emb.loc['shoes'] - emb.loc['shoe'])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0.8611847060016998"
+      ]
+     },
+     "execution_count": 10,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "cosine_sim(emb.loc['shoes'], emb.loc['boots'])"
    ]
   },
   {
@@ -177,7 +197,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 60,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
