experiments with 50-d GloVe word emb; unsuccessful; emb space not suitable, cosine_sim yields undesirable search results

--- a/app/query_imgs_w_emb.ipynb
+++ b/app/query_imgs_w_emb.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 57,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -66,10 +66,57 @@
     "from imgsearch import cosine_sim\n",
     "import re\n",
     "\n",
+    "def getwv(s):\n",
+    "    return model.get_word_vector(s.lower())\n",
+    "\n",
     "def getwv_multi_labels(labels, model):\n",
     "    #sublabels = labels.split(', ')\n",
     "    sublabels = re.split(r'[, ]\\s*', labels)\n",
     "    return sum([model.get_word_vector(subl.lower()) for subl in  sublabels]) / len(sublabels)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 90,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Wall time: 5.04 s\n"
+     ]
+    }
+   ],
+   "source": [
+    "%%time\n",
+    "import csv\n",
+    "data_path = r\"C:\\Users\\alexa\\Documents\\data\\glove.6B\"\n",
+    "glove_data_file = 'glove.6B.50d.txt'\n",
+    "emb = pd.read_table(os.path.join(data_path, glove_data_file), sep=\" \", index_col=0, header=None, quoting=csv.QUOTE_NONE)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 91,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from imgsearch import cosine_sim\n",
+    "import re\n",
+    "\n",
+    "exception_series = pd.Series([1e-5 for i in range(50)], index=list(range(1,51)))\n",
+    "\n",
+    "def getwv(s, emb):\n",
+    "    try:\n",
+    "        return emb.loc[s.lower()]\n",
+    "    except:\n",
+    "        return exception_series\n",
+    "\n",
+    "def getwv_multi_labels(labels, emb):\n",
+    "    #sublabels = labels.split(', ')\n",
+    "    sublabels = re.split(r'[, ]\\s*', labels)\n",
+    "    return sum([getwv(subl, emb) for subl in  sublabels]) / len(sublabels)"
    ]
   },
   {
@@ -88,24 +135,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 61,
+   "execution_count": 97,
    "metadata": {},
    "outputs": [],
    "source": [
-    "with open(r\"static/img_emb_dict.pkl\", \"rb\") as f:\n",
+    "with open(r\"static/img_emb_dict_50d.pkl\", \"rb\") as f:\n",
     "    img_emb_dict = pickle.load(f)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 62,
+   "execution_count": 98,
    "metadata": {},
    "outputs": [],
    "source": [
-    "def image_search_res5(query, img_emb_dict, model):\n",
+    "def image_search_res5(query, img_emb_dict, emb):\n",
     "    \n",
     "    # get query embedding representation\n",
-    "    q = getwv_multi_labels(query, model)\n",
+    "    q = getwv_multi_labels(query, emb)\n",
     "    \n",
     "    if q.sum() != 0:\n",
     "        \n",
@@ -129,6 +176,49 @@
     "        return ranked[:12]\n",
     "    else:\n",
     "        return []"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 105,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Wall time: 2.56 s\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "[('1337-11973-large_default-maillot-de-bain-apnee.jpg', 0.6898951391501433),\n",
+       " ('1359-13044-large_default-t-shirt-wonderlandes.jpg', 0.6632117649964778),\n",
+       " ('1359-11714-large_default-t-shirt-wonderlandes.jpg', 0.6632077507946511),\n",
+       " ('1020-10242-large_default-t-shirt-la-belle-vie.jpg', 0.6631779094229434),\n",
+       " ('1020-8733-large_default-t-shirt-la-belle-vie.jpg', 0.6631121647741495),\n",
+       " ('1593-13046-large_default-t-shirt-jeu-de-mains.jpg', 0.6627354604149222),\n",
+       " ('1021-8792-large_default-t-shirt-mauvaise-reputation.jpg',\n",
+       "  0.6625222204742057),\n",
+       " ('1201-10244-large_default-t-shirt-oh-la-la.jpg', 0.6624246590254446),\n",
+       " ('1360-11514-large_default-t-shirt-fluctuat-nec-mergitur.jpg',\n",
+       "  0.6624216284902036),\n",
+       " ('1021-8735-large_default-t-shirt-mauvaise-reputation.jpg',\n",
+       "  0.6621673283056734),\n",
+       " ('1822-14889-large_default-t-shirt-serengueti.jpg', 0.6618654047730939),\n",
+       " ('1592-13403-large_default-t-shirt-think-green.jpg', 0.661746119532137)]"
+      ]
+     },
+     "execution_count": 105,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "%%time\n",
+    "query = 'shoe'\n",
+    "image_search_res5(query, img_emb_dict, emb)"
    ]
   },
   {
@@ -188,14 +278,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 117,
    "metadata": {},
    "outputs": [],
    "source": [
-    "def inspect_img_vs_query(query, img_id):\n",
+    "def inspect_img_vs_query(query, img_id, emb):\n",
     "    print(\n",
     "        labelled_df.query(\"img_id == '{}'\".format(img_id)).image_name.values[0])\n",
-    "    scores = [(weight, cosine_sim(getwv_multi_labels(query, model), vec)) for vec, weight in img_emb_dict['{}'.format(img_id)][:3]]\n",
+    "    scores = [(weight, cosine_sim(getwv_multi_labels(query, emb), vec)) for vec, weight in img_emb_dict['{}'.format(img_id)][:3]]\n",
     "    scores = [(weight * sim, weight, sim) for weight, sim in scores]\n",
     "    print(\n",
     "        sum([score[0] for score in scores]))\n",
@@ -244,35 +334,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "def getwv(s):\n",
-    "    return model.get_word_vector(s.lower())"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 92,
    "metadata": {},
    "outputs": [],
    "source": [
     "# img emb = weighted sum of vec\n",
-    "get_weighted_sum_vec = lambda tup: sum([getwv(label) * weight for weight, label in tup])\n",
-    "get_weighted_sum_vec_multilbl = lambda tup: sum([getwv_multi_labels(label, model) * weight for weight, label in tup])\n",
+    "get_weighted_sum_vec = lambda tup: sum([getwv(label, emb) * weight for weight, label in tup])\n",
+    "get_weighted_sum_vec_multilbl = lambda tup: sum([getwv_multi_labels(label, emb) * weight for weight, label in tup])\n",
     "\n",
     "# img emb = [(vec, weight)]\n",
-    "get_tup_vec_weigth = lambda tup: [(getwv(label), weight) for weight, label in tup]\n",
-    "get_tup_vec_weight_multilbl = lambda tup: [(getwv_multi_labels(label, model), weight) for weight, label in tup]\n",
+    "get_tup_vec_weigth = lambda tup: [(getwv(label, emb), weight) for weight, label in tup]\n",
+    "get_tup_vec_weight_multilbl = lambda tup: [(getwv_multi_labels(label, emb), weight) for weight, label in tup]\n",
     "\n",
     "# img emb = vec of first label\n",
-    "get_vec_first_label = lambda tup: sum([getwv_multi_labels(label, model) for weight, label in [tup[0]]])"
+    "get_vec_first_label = lambda tup: sum([getwv_multi_labels(label, emb) for weight, label in [tup[0]]])"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 93,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -284,7 +364,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 94,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -294,35 +374,36 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 95,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Wall time: 4.93 s\n"
+      "Wall time: 18min 40s\n"
      ]
     }
    ],
    "source": [
     "%%time\n",
+    "# takes about 20 minutes\n",
     "img_emb_dict = dict(zip(\n",
-    "    labelled_df.img_id,\n",
-    "    #labelled_df.content.apply(get_weight_vec_multilbl) # img emb = weighted sum of vec\n",
-    "    #labelled_df.content.apply(get_vec_first_label) # mg emb = vec of first label\n",
-    "    labelled_df.content.apply(get_tup_vec_weight_multilbl)# img emb = [(vec, weight)]\n",
+    "        labelled_df.loc[:].img_id,\n",
+    "        #labelled_df.content.apply(get_weight_vec_multilbl) # img emb = weighted sum of vec\n",
+    "        #labelled_df.content.apply(get_vec_first_label) # mg emb = vec of first label\n",
+    "        labelled_df.loc[:].content.apply(get_tup_vec_weight_multilbl)# img emb = [(vec, weight)]\n",
     "))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 96,
    "metadata": {},
    "outputs": [],
    "source": [
-    "#with open(r\"static/img_emb_dict.pkl\", \"wb\") as f:\n",
-    "    #pickle.dump(img_emb_dict, f)"
+    "with open(r\"static/img_emb_dict_50d.pkl\", \"wb\") as f:\n",
+    "    pickle.dump(img_emb_dict, f)"
    ]
   },
   {
@@ -334,7 +415,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 242,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -408,10 +489,10 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "    path='static/img_top10_labels_w_weights.csv'\n",
+    "path='static/img_top10_labels_w_weights.csv'\n",
     "    \n",
-    "    # load image label data\n",
-    "    labelled_df.to_csv(path, index=False)"
+    "# load image label data\n",
+    "#labelled_df.to_csv(path, index=False)"
    ]
   }
  ],
