--- a/app/query_imgs_w_emb.ipynb
+++ b/app/query_imgs_w_emb.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -21,58 +21,65 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 58,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
    "source": [
-    "data_path = r\"C:\\Users\\alexa\\Documents\\data\\wir\\project\"\n",
-    "fname = r\"cc.en.300.bin\""
+    "### fastText"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 59,
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "data_path = r\"C:\\Users\\alexa\\Documents\\data\\wir\\project\"\n",
+    "fname = r\"cc.en.150.bin\""
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Wall time: 1min 9s\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "Warning : `load_model` does not return WordVectorModel or SupervisedModel any more, but a `FastText` object which is very similar.\n"
+      "Wall time: 18.6 s\n"
      ]
     }
    ],
    "source": [
     "%%time\n",
     "import fasttext\n",
-    "model = fasttext.load_model(\n",
+    "emb = fasttext.load_model(\n",
     "    os.path.join(data_path, fname))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 60,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
     "from imgsearch import cosine_sim\n",
     "import re\n",
     "\n",
-    "def getwv(s):\n",
+    "def getwv(s, model):\n",
     "    return model.get_word_vector(s.lower())\n",
     "\n",
     "def getwv_multi_labels(labels, model):\n",
     "    #sublabels = labels.split(', ')\n",
     "    sublabels = re.split(r'[, ]\\s*', labels)\n",
-    "    return sum([model.get_word_vector(subl.lower()) for subl in  sublabels]) / len(sublabels)"
+    "    return sum([getwv(subl, model) for subl in  sublabels]) / len(sublabels)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### GloVe"
    ]
   },
   {
@@ -135,17 +142,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 97,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
-    "with open(r\"static/img_emb_dict_50d.pkl\", \"rb\") as f:\n",
+    "with open(r\"static/img_emb_dict_150d_fasttext.pkl\", \"rb\") as f:\n",
     "    img_emb_dict = pickle.load(f)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 98,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -176,6 +183,49 @@
     "        return ranked[:12]\n",
     "    else:\n",
     "        return []"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Wall time: 1.94 s\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "[('1359-11714-large_default-t-shirt-wonderlandes.jpg', 0.6324445790672139),\n",
+       " ('1020-10242-large_default-t-shirt-la-belle-vie.jpg', 0.632433138300738),\n",
+       " ('1020-8733-large_default-t-shirt-la-belle-vie.jpg', 0.6324279881868502),\n",
+       " ('1359-13044-large_default-t-shirt-wonderlandes.jpg', 0.6324220065753512),\n",
+       " ('1201-10244-large_default-t-shirt-oh-la-la.jpg', 0.6322406590341979),\n",
+       " ('1593-13046-large_default-t-shirt-jeu-de-mains.jpg', 0.6322229791388215),\n",
+       " ('1021-8792-large_default-t-shirt-mauvaise-reputation.jpg',\n",
+       "  0.6321523631058362),\n",
+       " ('1021-8735-large_default-t-shirt-mauvaise-reputation.jpg',\n",
+       "  0.632150033519915),\n",
+       " ('1360-11514-large_default-t-shirt-fluctuat-nec-mergitur.jpg',\n",
+       "  0.6318065426074744),\n",
+       " ('1822-14889-large_default-t-shirt-serengueti.jpg', 0.6315953772175923),\n",
+       " ('1019-10310-large_default-t-shirt-bear-and-sun.jpg', 0.6313840013274622),\n",
+       " ('1592-13403-large_default-t-shirt-think-green.jpg', 0.6312716568081105)]"
+      ]
+     },
+     "execution_count": 14,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "%%time\n",
+    "query = 'shoes'\n",
+    "image_search_res5(query, img_emb_dict, emb)"
    ]
   },
   {
@@ -334,7 +384,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 92,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -352,7 +402,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 93,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -364,7 +414,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 94,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -374,20 +424,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 95,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Wall time: 18min 40s\n"
+      "Wall time: 2.03 s\n"
      ]
     }
    ],
    "source": [
     "%%time\n",
-    "# takes about 20 minutes\n",
+    "# takes about 20 minutes w/ GloVe\n",
+    "# takes about 3s w/ fastText\n",
     "img_emb_dict = dict(zip(\n",
     "        labelled_df.loc[:].img_id,\n",
     "        #labelled_df.content.apply(get_weight_vec_multilbl) # img emb = weighted sum of vec\n",
@@ -398,11 +449,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 96,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
-    "with open(r\"static/img_emb_dict_50d.pkl\", \"wb\") as f:\n",
+    "with open(r\"static/img_emb_dict_150d_fasttext.pkl\", \"wb\") as f:\n",
     "    pickle.dump(img_emb_dict, f)"
    ]
   },
